refactor(product-requirements,domain-modelling,architecture-tests): Nachlese der Review-Funde zu #637 und #635
Behebt die nicht-blockierenden P2-Nits aus den Review-Kommentaren zu #637 (#439)
und #635 (#441): Modul-CLAUDE.md und POM-Kommentar zitieren die tatsaechlichen
ArchUnit-Regelnamen/-nummern aus DependencyRulesTest statt Vor-Rebase-Reste;
arknet-architecture-tests/CLAUDE.md zaehlt nicht mehr eine "siebte Invariante"
neben zehn ArchUnit-Regeln; die Cores von arknet-requirements und arknet-use-cases
lassen die redundante <version> fuer arknet-product-requirements-shared weg, damit
das dependencyManagement des Kontext-Parents wirklich greift (Muster aus #635);
InMemoryRequirementLookup/InMemoryConstraintLookup#resolveCodes tolerieren jetzt
doppelte Ids wie der echte Adapter (VALUES-Join), mit Regressionstests;
arknet-product-requirements-shared bekommt Value-Object-Tests fuer RequirementCode,
ConstraintCode und TermRef nach dem Vorbild von TermCodeTest.

Dazu ein P3 aus #635 (Javadoc-Zahlenfehler "in all six contexts") und zwei kleine
P3 aus #637 (BC-Nummern in der Root-CLAUDE.md vereinheitlicht), sowie als Zusatz
arknet-domain-modelling-shared als explizite Test-Dependency in
arknet-architecture-tests/pom.xml, symmetrisch zu arknet-product-requirements-shared.

Refs #439, refs #441

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>